Add a base kivy panel settings
The app needs a panel setting to customize the kickstart file. It has added
three new functions build_config, build_setting in the main file. Also has
been create a file, called settings.json. Now the button configure brings us
to a panel setting when we can see a few options.

--- a/kickoff/main.kv
+++ b/kickoff/main.kv
@@ -4,7 +4,6 @@
     background_color: [0, 1, 0, .6]
     border: [20, 30, 20, 30]
     font_size: 18
-
 <MainWindow>
     BoxLayout:
         canvas.before:
@@ -25,6 +24,7 @@
             padding: 4, 4, 4, 1
             MyButton:
                 text: 'Configure'
+                on_press: app.open_settings()
             MyButton:
                 text: 'Validate'
                 on_press: root.validate()
@@ -47,4 +47,6 @@
             ProgressBar:
                 id: pb
                 size_hint_x: .1
-                value: (root.progress) % 100.
+
+
+
