Script section is functional
The script section in the settings panel is funcional and is possible
add scripts to the kickstart file. It has been created script.py file
with the class Script which control and format the pre and post scripts.

--- a/kickoff/settings.kv
+++ b/kickoff/settings.kv
@@ -387,7 +387,8 @@
                         orientation: 'vertical'
                         padding: 20, 0, 20, 0
                         size_hint: [1, 2]   
-                        TextInput:
+                        CodeInput:
+                            id: pre
                     BoxLayout:
                         orientation: 'vertical'
                         padding: 20, 0, 20, 0
@@ -398,7 +399,8 @@
                         orientation: 'vertical'
                         padding: 20, 0, 20, 0
                         size_hint: [1, 2]   
-                        TextInput:
+                        CodeInput:
+                            id: pos
                     BoxLayout:
                         orientation: 'vertical'
                         padding: 20, 0, 20, 0
